solve alignments problem that differs between grid items on the borwse/organism and browse/entries

--- a/src/components/Table/views/Grid/style.css
+++ b/src/components/Table/views/Grid/style.css
@@ -74,7 +74,7 @@
   margin-bottom: 0;
   display: flex;
   justify-content: space-between;
-  align-items: baseline;
+  align-items: center;
 }
 .card-sum-info a,
 .card-sum-info a:visited,
